[package]
name = "simple-sdmmc"
version = "0.1.1"
description = "A simple SD/MMC driver."
edition = "2024"
authors = ["朝倉水希 <asakuramizu111@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Starry-OS/simple-sdmmc"

[dependencies]
# axdma = { workspace = true }
# axtask = { workspace = true, features = ["multitask"] }
axdma = { version = "0.3.0-preview.2" }
axtask = { version = "0.3.0-preview.2", features = ["multitask"] }
axhal = { version = "=0.3.0-preview.2" }
bitfield-struct = "0.11.0"
log = "0.4"
volatile = { version = "0.6.1", features = ["derive"] }
